--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://Miike0.github.io/Avocados-little-shop/favicon.ico" />
+    <link rel="icon" href="https://miike0.github.io/Avocados-little-shop/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-snowpack-app"
     />
     <!--
-      Snowpack will replace https://Miike0.github.io/Avocados-little-shop/ with the value you have for `baseUrl` in `snowpack.config.js`.
+      Snowpack will replace https://miike0.github.io/Avocados-little-shop/ with the value you have for `baseUrl` in `snowpack.config.js`.
       Make sure to update it with your GitHub Page URL. https://<your-username>.github.io/<your-repo-name>
 
       More about config options:
@@ -18,7 +18,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://Miike0.github.io/Avocados-little-shop/_dist_/index.css"
+      href="https://miike0.github.io/Avocados-little-shop/_dist_/index.css"
     />
     <title>Avocados</title>
   </head>
@@ -44,6 +44,6 @@
     </div>
 
     <!-- Add more scripts here -->
-    <script type="module" src="https://Miike0.github.io/Avocados-little-shop/_dist_/index.js"></script>
+    <script type="module" src="https://miike0.github.io/Avocados-little-shop/_dist_/index.js"></script>
   </body>
 </html>
